k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # UPDATE THIS LINE ABOVE
spec:
  tls:
    - hosts:
        - horoanalytics.com
        - www.horoanalytics.com
      secretName: horoanalytics-com
  rules:
    - host: horoanalytics.com
      http:
        paths:
          - path: /?(.*)
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.horoanalytics.com
    http:
      paths:
        - path: /?(.*)
          # UPDATE THIS LINE ABOVE
          backend:
            serviceName: client-cluster-ip-service
            servicePort: 3000
        - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE
          backend:
            serviceName: server-cluster-ip-service
            servicePort: 5000
